[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/menu/options_menu/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/menu/options_menu/video_section/VideoSection.tscn" type="PackedScene" id=2]

[sub_resource type="Theme" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
theme = SubResource( 1 )

[node name="TabContainer" type="TabContainer" parent="Panel/VBoxContainer"]
margin_right = 924.0
margin_bottom = 476.0
size_flags_vertical = 3

[node name="Video" type="Tabs" parent="Panel/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3

[node name="VideoSection" parent="Panel/VBoxContainer/TabContainer/Video" instance=ExtResource( 2 )]

[node name="Audio" type="Tabs" parent="Panel/VBoxContainer/TabContainer"]
visible = false
margin_right = 40.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
margin_top = 480.0
margin_right = 924.0
margin_bottom = 500.0
text = "Exit"

[connection signal="value_updated" from="Panel/VBoxContainer/TabContainer/Video/VideoSection" to="." method="_on_video_value_updated"]
[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_Button_pressed"]
